# macro-equity-pipeline

./: README.md  pyproject.toml
src/macro_pipeline/: main.py
src/macro_pipeline/dashboard/: app.py
src/macro_pipeline/fetchers/: base.py  fred.py  yahoo.py
src/macro_pipeline/processors/: analytics.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_analytics.py  test_base_fetcher.py  test_fred_fetcher.py  test_yahoo_fetcher.py
